<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_store">

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.uit.gamestore.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_your_games"
        android:name="com.uit.gamestore.ui.your_games.YourGamesFragment"
        android:label="@string/title_your_games"
        tools:layout="@layout/fragment_your_games" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.uit.gamestore.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>